# team-task-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts
docs/: architecture.md  data-model.md  deployment.md  domain.md  features.md  overview.md  paradigms.md  reports.md  tech-stack.md  ux-principles.md  workflows.md
docs/implementation/: README.md  phase-0-setup.md  phase-1-people.md  phase-2-front-desk.md  phase-3-job-orders.md  phase-4-tasks.md  phase-5-kanban-ui.md  phase-6-client-view.md  phase-7-dashboard-reports.md  phase-8-quality-deploy.md  phase-8-user-roles-permissions.md  phase-9-quality-deploy.md
src/access/: __init__.py  apps.py  context_processors.py  forms.py  middleware.py  mixins.py  roles.py  views.py
src/areas/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
src/clients/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
src/common/: admin.py  apps.py  constants.py  helpers.py  validators.py
src/dashboard/: apps.py  selectors.py  urls.py  views.py
src/employees/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
src/reports/: apps.py  exports.py  selectors.py  urls.py  views.py
src/sales/: admin.py  apps.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
templates/: 403.html  base.html  home.html  public_base.html
tracker/: asgi.py  settings.py  urls.py  wsgi.py
(+163 files in other folders)
